fixed wrong height bug of paper

--- a/src/style.css
+++ b/src/style.css
@@ -160,7 +160,7 @@ a {
     display: flex;
     position: relative;
     max-width: 1280px;
-    height: 100vh;
+    height: auto;
     flex-direction: row;
     justify-content: space-between;
     margin: 0 auto;
